--- a/index.html
+++ b/index.html
@@ -4,9 +4,13 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>lesson 4</title>
+	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-	<h1>title</h1>
+	<h1>CHARGE.E DE PROJET</h1>
+	<p>CDI / CDD / FREELANCE REMUNERATION EXPERIENCE DATE D’ENVOI</p>
+	<h2>IMPACT ?</h2>
+	<p>IMPACT c’est une équipe transdisciplinaire composée de professionnels des médias, de la pédagogie et de la communication. Leurs compétences sont mobilisées individuellement ou collectivement</p>
 
 </body>
 </html>
